# depth_cam_extrinsics_calib

./: .travis.yml  CMakeLists.txt  README.md  depth_cam_extrinsics_calib.rosinstall  depth_offsets_calib.py  package.xml  setup.py  simple_chessboard_calib.py  simple_singlepoints_calib.py
camera_info/: depth_1306260132.yaml  depth_1402240420.yaml  depth_1402250062.yaml  rgb_1306260132.yaml  rgb_1402240420.yaml  rgb_1402250062.yaml
cfg/: params.cfg
config/: red.yaml  yellow.yaml
launch/: ar_marker.launch  calib.launch  calib_depth_offsets.launch  calib_extrinsics.launch  hsv_segmentation.launch
ros_image_tools/: kinect.py  kinect_v2.py  ros_image_subscriber.py  tf_broadcaster.py
src/: compute_transform_6d.py  hsv_segmentation.cpp  tf_to_pointstamped.cpp
src/depth_cam_extrinsics_calib/: depth_offsets_calib.py  simple_chessboard_calib.py  simple_singlepoints_calib.py
