<?xml version="1.0"?>
<package>
  <name>depth_cam_extrinsics_calib</name>
  <version>0.0.1</version>
  <description>The depth_cam_extrinsics package contains nodes to calibration the extrinsics of depth_sensors: position and depth offsets</description>

  <maintainer email="hoarau.robotics@gmail.com">Antoine Hoarau</maintainer>
  <maintainer email="jimmy.dasilva@isir.upmc.fr">Jimmy Da Silva</maintainer>

  <license>CeCILL</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/kinect_extrinsics_simple</url> -->

  <author email="hoarau.robotics@gmail.com">Antoine Hoarau</author>
  <author email="jimmy.dasilva@isir.upmc.fr">Jimmy Da Silva</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>openni_camera</build_depend>
  <build_depend>openni_launch</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>depth_cam_tools</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <run_depend>std_srvs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>openni_camera</run_depend>
  <run_depend>openni_launch</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>depth_cam_tools</run_depend>
  <run_depend>ar_track_alvar</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
